--- a/css/main.css
+++ b/css/main.css
@@ -5,8 +5,8 @@ p {
   color: white;
 }
 body {
-  background-image: url("https://yourmother.me/images/BWD_Wallpaper.png");
- /* background-color: rgb(30, 30, 30); */
+ /* background-image: url("https://yourmother.me/images/BWD_Wallpaper.png"); */
+background-color: rgb(84, 84, 84);
 
 }
 h4 {
